<resources>
    <string name="app_name" translatable="false">PJDM.2018.2019.21270246.21270093</string>
    <string name="personal_diary">Personal Diary</string>
    <string name="about_text"><b>Authors:</b>\n\tPedro dos Santos Alves - a21270246\n\tLeandro Adão Fidalgo - a21270093\n\n<b>Subject:</b>\n\tJava Programming for Mobile Devices\n\n<b>Course:</b>\n\tTechnologies and Programming of Information Systems\n\n<b>Year:</b>\n\t2018/2019\n\n<b>Copyright Information:</b>\n\tIcon adapted from StockUnlimited\n\tWeather data from OpenWeatherMap (https://openweathermap.org/)\n\tGeographical data from GoogleMaps</string>
    <string name="by">by</string>
    <string name="new_account">New Account</string>
    <string name="about">About - Personal Diary</string>
    <string name="save">Save</string>
    <string name="edit_account">Edit Account</string>
    <string name="new_text_note">New Text Note</string>
    <string name="new_draw_note">New Draw Note</string>
    <string name="new_image_note">New Image Note</string>
    <string name="new_weather_note">New Weather Note</string>
    <string name="new_geolocation_note">New Geolocation Note</string>
    <string name="delete">Delete</string>
    <string name="deleteMsgUser">Are you sure you want to delete this user?</string>
    <string name="deleteMsgNote">Are you sure you want to delete this note?</string>
    <string name="deleting">Deleting</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="userNotDeleted_error">There was an error deleting the user.</string>
    <string name="noteNotDeleted_error">There was an error deleting the note.</string>
    <string name="please_input_the_user_s_password">Please input the user\'s Password.</string>
    <string name="date_error">Date Error</string>
    <string name="title_error">Title Error</string>
    <string name="notetitle_error">Note Title Error</string>
    <string name="notedescription_error">Note Description Error</string>
    <string name="username_error">Username Error</string>
    <string name="userdescription_error">User Description Error</string>
    <string name="example_text">Example Text</string>
    <string name="okay" translatable="false">Okay</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_new_text_note">Create New Text Note</string>
    <string name="create_new_draw_note_setup">Set Up New Draw Note</string>
    <string name="create_new_draw_note">Create New Draw Note</string>
    <string name="new_acc_error">Error creating account.</string>
    <string name="edit_acc_error">Error editing account.</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="logIn">Log In</string>
    <string name="edit">Edit</string>
    <string name="logging_in">Logging in as</string>
    <string name="login_error">Incorrect password. Try again.</string>
    <string name="current_password">Current Password:</string>
    <string name="settings">Settings</string>
    <string name="user_notes">User Notes</string>
    <string name="SLM">Shared List Mode</string>
    <string name="OrderBy">Order by</string>
    <string name="username_length_error">Username must have between 3 and 22 letters.</string>
    <string name="password_length_error">Password must be between 4 and 22 letters.</string>
    <string name="not_authenticated">Passwords do not match.</string>
    <string name="new_tn_error">Error creating new text note.</string>
    <string name="new_dn_error">Error creating new draw note.</string>
    <string name="new_in_error">Error creating new image note.</string>
    <string name="new_wn_error">Error creating new weather note.</string>
    <string name="new_gn_error">Error creating new geolocation note.</string>
    <string name="note_title">Title:</string>
    <string name="shared_note">Shared Note</string>
    <string name="title_is_empty_error">Title is empty.</string>
    <string name="description_is_empty_error">Description is empty.</string>
    <string name="select_shared_users">Select Shared Users</string>
    <string name="share">Share</string>
    <string name="check_shared_error">Please check the shared checkbox.</string>
    <string name="note_error">There is a problem with your note.</string>
    <string name="edit_tn_error">Error editing text note.</string>
    <string name="edit_wn_error">Error editing weather note.</string>
    <string name="edit_gn_error">Error editing geolocation note.</string>
    <string name="user_not_owner_error">You are not the owner of the note.</string>
    <string name="background_color_txt">Background Color:</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="alpha">Alpha</string>
    <string name="pencil_color_txt">Pencil Color:</string>
    <string name="background_color">Background Color</string>
    <string name="pencil_color">Pencil Color</string>
    <string name="pencil_style_txt">Pencil Style:</string>
    <string name="solid">Solid</string>
    <string name="dashed">Dashed</string>
    <string name="clear">Clear</string>
    <string name="created">Note created.</string>
    <string name="notCreated">Note not created.</string>
    <string name="edited">Note edited.</string>
    <string name="notEdited">Note not edited.</string>
    <string name="background">Background:</string>
    <string name="take_photo">Take photo</string>
    <string name="select_image">Select image</string>
    <string name="select">Select</string>
    <string name="soon">Available soon</string>
    <string name="create_new_image_note_setup">Set Up New Image Note</string>
    <string name="create_new_weather_note_setup">Set Up New Weather Note</string>
    <string name="create_new_weather_note">Create New Weather Note</string>
    <string name="create_new_geo_note">Create New Geolocation Note</string>
    <string name="select_image_error">Select a background image</string>
    <string name="create_new_image_note">Create New Image Note</string>
    <string name="accessing_page_error">Error accessing page</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="northeast">Northeast</string>
    <string name="southeast">Southeast</string>
    <string name="southwest">Southwest</string>
    <string name="northwest">Northwest</string>
    <string name="error">Error</string>
    <string name="Note_Settings">Note Settings</string>
    <string name="Weather_Notes_Settings">Weather Notes Settings</string>
    <string name="Metric_System">Metric System</string>
    <string name="weather_">Weather:</string>
    <string name="description_">Description:</string>
    <string name="main_">Main:</string>
    <string name="temperature_">Temperature:</string>
    <string name="pressure_">Pressure:</string>
    <string name="humidity_">Humidity:</string>
    <string name="minimum_">Minimum:</string>
    <string name="maximum_">Maximum:</string>
    <string name="wind_">Wind:</string>
    <string name="speed_">Speed:</string>
    <string name="degree_">Degree:</string>
    <string name="city_">City:</string>
    <string name="country_">Country:</string>
    <string name="check">Check</string>
    <string name="city_is_empty_error">City is empty.</string>
    <string name="not_available">Not available.</string>
    <string name="internet_access_error">No internet access.</string>
    <string name="check_city_error">Please press the \'check\' button.</string>
    <string name="location_">Location:</string>
    <string name="latitude_">Latitude:</string>
    <string name="longitude_">Longitude:</string>
    <string name="photos_">Photos:</string>
    <string name="your_location">Your location</string>
    <string name="location_note_found">No location found</string>
    <string name="others_location">Location of</string>
    <string name="location_access_error">Location information is disabled.</string>
    <string name="add_" translatable="false">+</string>
</resources>
