<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateImageNoteSetUpActivity"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/ACINSUShared"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/shared_note"
            android:checked="false" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_title"
            android:textSize="24sp"
            android:textColor="@color/black" />
        <LinearLayout
            android:id="@+id/ACINSUTitleField"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            android:padding="1dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">
                <EditText
                    android:id="@+id/ACINSUTitle"
                    android:focusedByDefault="false"
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:maxLength="22"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/background"
                android:textSize="20sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ACINSURG2"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ACINSUSelImg"
                    android:text="@string/select_image"
                    android:checked="true" />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ACINSUNewImg"
                    android:text="@string/take_photo"
                    android:checked="false" />
            </RadioGroup>
            <Button
                android:id="@+id/ButSelImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:textAllCaps="false" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp">

            <TextView
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pencil_color_txt"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/invisiblebg"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/ACINSUColorPreview2"
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:contentDescription="@string/pencil_color" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/red"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_weight="1" />
                <SeekBar
                    android:id="@+id/ACINSURedBar2"
                    android:layout_width="0dp"
                    android:max="255"
                    android:progress="1"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/green"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:textColor="@color/black" />
                <SeekBar
                    android:id="@+id/ACINSUGreenBar2"
                    android:layout_width="0dp"
                    android:progress="1"
                    android:max="255"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/blue"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="@color/black" />
                <SeekBar
                    android:id="@+id/ACINSUBlueBar2"
                    android:layout_width="0dp"
                    android:max="255"
                    android:progress="1"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/alpha"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="@color/black" />
                <SeekBar
                    android:id="@+id/ACINSUAlphaBar2"
                    android:layout_width="0dp"
                    android:max="255"
                    android:progress="1"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pencil_style_txt"
            android:textSize="20sp"
            android:textColor="@color/black" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <RadioGroup
                android:id="@+id/ACINSURG"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/solid"
                    android:id="@+id/ACINSUSolid"
                    android:checked="true" />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dashed"
                    android:id="@+id/ACINSUDashed"
                    android:checked="false" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</ScrollView>