<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/DULLL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_delete" />

        <TextView
            android:id="@+id/DULDeletingMsg"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/deleting" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/please_input_the_user_s_password"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/DULLLPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgray"
        android:padding="1dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <EditText
                android:id="@+id/DULPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="textPassword"
                android:maxLength="22" />
        </LinearLayout>
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/deleteMsgUser"
        android:gravity="center" />

</LinearLayout>