<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LILLL"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/ALImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:drawable/btn_star_big_on"
                android:padding="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/ALTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/login"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LILText"
        android:padding="5dp"
        android:text="@string/logging_in"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/please_input_the_user_s_password"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/LILLLPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgray"
        android:padding="1dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <EditText
                android:id="@+id/LILPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="textPassword"
                android:maxLength="22" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>