<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".CreateTextNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/ACTNShared"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/shared_note"
            android:checked="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_title"
            android:textSize="24sp"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/ACTNTitleField"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            android:padding="1dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">
                <EditText
                    android:id="@+id/ACTNTitle"
                    android:layout_width="match_parent"
                    android:focusedByDefault="false"
                    android:textSize="14sp"
                    android:maxLength="22"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/ACTNDescriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/lightgray"
            android:padding="1dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">
                <EditText
                    android:id="@+id/ACTNDescription"
                    android:layout_width="match_parent"
                    android:focusedByDefault="false"
                    android:textSize="14sp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>